--- a/.github/workflows/update-covid-19.yml
+++ b/.github/workflows/update-covid-19.yml
@@ -36,7 +36,7 @@ jobs:
  #       uses: actions/checkout@v2
 
       - name: Run update script
-        run: php -r "mail('sailormax@live.com', 'test from actions', 'some message')"
+        run: php -r "mail('sailormax@live.com', 'test from actions', 'some message');"
 #        run: php -f covid-19/scripts/update_data.php ../
           
       - name: Commit files
