--- a/.github/workflows/update-covid-19.yml
+++ b/.github/workflows/update-covid-19.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           whoami
           pwd
+          yes | sudo apt-get install sendmail
 #          git status
 #          git log -1
 
