--- a/.github/workflows/update-covid-19.yml
+++ b/.github/workflows/update-covid-19.yml
@@ -4,7 +4,7 @@ name: Update COVID-19 data
 # events but only for the master branch OR schedule cron
 on:
   schedule:
-  - cron: '05 8 * * *'
+  - cron: '30 4 * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -15,32 +15,27 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Setup PHP
-        run: php -i
+      - name: Setup addition packages
+        run: yes | sudo apt-get install sendmail
+
+ #     - name: Setup PHP
+ #       run: php -i
  #       uses: shivammathur/setup-php@v2
  #       with:
  #         php-version: '7.4'
  #         extensions: mbstring, intl
  #         ini-values: memory_limit=256M, short_open_tag=On
 
-      - name: Check home
-        run: |
-          whoami
-          pwd
-          yes | sudo apt-get install sendmail
-#          git status
-#          git log -1
-
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
- #     - name: Checkout
- #       uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Run update script
-        run: php -r "mail('sailormax@live.com', 'test from actions', 'some message', 'From\:\ notifications@github.com'); sleep(50);"
-#        run: php -f covid-19/scripts/update_data.php ../
+#      - name: Run update script
+#        run: php -d short_open_tag=On -f covid-19/scripts/db-import/import.php ../
 
-      - name: Check emails
+      - name: Check emails log
         run: |
+          php -r "sleep(50);"
           sudo tail /var/log/mail.log
 
 #      - name: Commit files
