--- a/.github/workflows/update-covid-19.yml
+++ b/.github/workflows/update-covid-19.yml
@@ -4,7 +4,7 @@ name: Update COVID-19 data
 # events but only for the master branch OR schedule cron
 on:
   schedule:
-  - cron: '05 9 * * *'
+  - cron: '30 9 * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run update script
-        run: php -d short_open_tag=On -f covid-19/scripts/import/import.php ../
+        run: php -d short_open_tag=On -d error_reporting="E_ALL & ~E_NOTICE" -f covid-19/scripts/import/import.php ../
 
       - name: Check emails log
         run: |
