--- a/.github/workflows/update-covid-19.yml
+++ b/.github/workflows/update-covid-19.yml
@@ -31,7 +31,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run update script
-        run: php -d short_open_tag=On -d error_reporting="E_ALL & ~E_NOTICE" -f covid-19/scripts/import/import.php ../../
+        run: |
+          php -d short_open_tag=On -d error_reporting="E_ALL & ~E_NOTICE" -f covid-19/scripts/import/import.php ../../
+          echo "::set-env name=GIT_CHANGED_FILES::$(git diff --name-status)"
 
       - name: Check emails log
         run: |
@@ -39,6 +41,7 @@ jobs:
           sudo tail /var/log/mail.log
 
       - name: Commit files
+#        if: env.GIT_CHANGED_FILES == ''
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
@@ -47,6 +50,7 @@ jobs:
           git commit -m "covid-19 / refresh database"
 
       - name: Push changes
+#        if: env.GIT_CHANGED_FILES == ''
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
