--- a/.github/workflows/update-covid-19.yml
+++ b/.github/workflows/update-covid-19.yml
@@ -4,7 +4,7 @@ name: Update COVID-19 data
 # events but only for the master branch OR schedule cron
 on:
   schedule:
-  - cron: '30 2,5,8,11 * * *'
+  - cron: '30 2,5,8,9,10,11 * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -47,8 +47,10 @@ jobs:
           git config --local user.name "GitHub Action"
           git status
           git add -A
+          git status
           git commit -m "covid-19 / refresh database"
           git pull
+          git status
 
       - name: Push changes
         if: env.GIT_CHANGED_FILES != ''
